--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,7 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
+    
+    //Use JDBC drivers
+    compile("mysql:mysql-connector-java:5.1.49")
 }
